@@ -3,4 +3,6 @@
 
 Responses
 
+- The API sets cache control headers for the response to time-out the page right-away. This may interfere with your application and caching logic and can be disabled. See the default API wrapper reference.
+
 <?php include('.Footer.tpl.php'); ?>
