@@ -3,5 +3,7 @@
 
 ProtocolFormatsHeader.php
 
+- Some firewalls may limit the length of the response header making this method of transfering the intelligence data not possible
+
 
 <?php include('.Footer.tpl.php'); ?>
